[package]
name = "registmily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
git2 = "0.14.1"
hex = "0.4.3"
hyper = "0.14.17"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }

tracing = "0.1.31"
tracing-subscriber = "0.3.9"
