[package]
name = "registmily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
config = "0.12.0"
dirs = "4.0.0"
git2 = { version = "0.14.1", features = ["ssh"] }
hex = "0.4.3"
hyper = "0.14.17"
pathdiff = "0.2.1"
reqwest = "0.11.10"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = {version = "0.7.0", features = ["full"] }

tracing = "0.1.31"
tracing-subscriber = "0.3.9"
