[package]
name = "registmily"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.8"
config = "0.12.0"
dirs = "4.0.0"
git2 = { version = "0.14.1", features = ["ssh"] }
hex = "0.4.3"
hyper = "0.14.17"
pathdiff = "0.2.1"
reqwest = "0.11.10"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = {version = "0.7.0", features = ["full"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "offline"] }

tracing = "0.1.31"
tracing-subscriber = "0.3.9"
rand = "0.8.5"
sqlx-database-tester = { version = "0.3.0", features = ["runtime-tokio"] }
openid-client = { git = "https://gitlab.com/famedly/company/backend/libraries/openid" }
openid-types = { git = "https://gitlab.com/famedly/company/backend/libraries/openid" }
time = "0.3.9"
url = "2.2.2"
async-trait = "0.1.53"
jsonwebtoken = "8.0.1"
